# SFML-Games

./: CMakeLists.txt  README.md
src/01_Tetris/: main.cpp
src/02_Doodle_Jump/: main.cpp
src/03_Arkanoid/: 03_Arkanoid  main.cpp
src/04_Snake/: 04_Snake  main.cpp
src/05_Minesweeper/: main.cpp
src/06_Fifteen-Puzzle/: main.cpp
src/07_Racing_Top_Down/: main.cpp
src/08_Outrun/: main.cpp
src/09_Xonix/: main.cpp
src/10_Bejeweled/: main.cpp
src/11_NetWalk_Pipe_Puzzle/: main.cpp
src/12_Mahjong_Solitaire/: main.cpp
src/13_Tron/: CMakeLists.txt  main.cpp
src/16_Asteroids/: main.cpp
